tests/baselines/reference/parserErrorRecoveryIfStatement2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement2.ts (2 errors) ====
    class Foo {
      f1() {
        if (a
            ~
!!! error TS2304: Cannot find name 'a'.
      }
      ~
!!! error TS1005: ')' expected.
      f2() {
      }
      f3() {
      }
    }